Fix on hover blurr side effect (hopefully)

--- a/styles/menu-item.scss
+++ b/styles/menu-item.scss
@@ -1,7 +1,7 @@
 // template for on hover effects
 %basic_hover {
-  transform: scale(102%);
-  transition: .1s ease-in-out;
+  transform: scale(101%);
+  transition: all .1s ease-in-out;
 }
 
 div.menu-items-container {
