--- a/styles/restaurants.scss
+++ b/styles/restaurants.scss
@@ -1,21 +1,3 @@
-@keyframes bounce {
-  0%,
-  20%,
-  60%,
-  100% {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-  }
-  40% {
-    -webkit-transform: translateY(-20px);
-    transform: translateY(-20px);
-  }
-  80% {
-    -webkit-transform: translateY(-10px);
-    transform: translateY(-10px);
-  }
-}
-
 .restaurants-container {
   margin-top: 40px;
 
@@ -26,23 +8,19 @@
     margin-bottom: 120px;
 
     &:hover {
-      transform: scale(103%);
-      transition: .1s ease-in-out;
+      transform: scale(101%);
+      transition: all .1s ease-in-out;
     }
 
     .restaurant-img {
       width: 100%;
       height:100%;
       object-fit: cover;
-      border-top-left-radius: 10px;
-      border-top-right-radius: 10px;
     }
 
     .restaurant-details {
       background-color: white;
       opacity: 80%;
-      border-bottom-left-radius: 10px;
-      border-bottom-right-radius: 10px;
       box-shadow: 4px 4px 15px black;
 
       .restaurant-title {
